[project]
name = "password-strength"
version = "0.1.0"
description = "A password strength checker app"
readme = "README.md"
requires-python = ">=3.10"
# Add your requirements.txt dependencies here
dependencies = [
    "streamlit",
    "pandas",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# THIS SECTION IS THE FIX FOR YOUR ERROR:
[tool.poetry]
package-mode = false

[tool.uv]
# This ensures uv manages it as an application
managed = true